2.2.1 (05.12.2018):

* Clear OCR output canvas when switching pages


2.2.0 (30.11.2018):

* Check validity of device blacklist regex when applying preferences
* Modify preference "Force new scan job between pages" to only take effect when
  scanning from flatbed. Closes bug #309 (ADF-duplex mode brocken)
* Fixed crash switching frontend option in Edit/Preferences between
  libimage-sane-perl and scanimage.
* Fixed visibility of scan widgets when switching from libimage-sane-perl to
  scanimage.
* Collect all warning and error messages in one dialog.
  Closes bug #309 (stuck while closing error windows)
* Be more tolerant of errors whilst fetching options.  Closes bug #313
  (Error retreiving scanner options: error getting option 5: invalid argument)
* Use default text if the title of a group of scan options is empty.
* Lock panning of image and OCR output views
* Update to German translation (thanks to Stephan Woidowski)
* Update to Russian translation (thanks to Valerii)


2.1.7 (12.10.2018):

* Report PerlMagick errors to user.
* Add note about checking policy.xml in case of ImageMagick Exception 445.
* Add %De for filename extension to default filenames directives.
* On selecting flatbed, force single-sided unless allow-batch-flatbed is enabled
* Fixed saving PDFs with non-ASCII characters in the path and no extension.
  Closes bug #312 (Bug: since v2.1.6 concerning special characters in file path)
* Update page range before calling process (e.g. OCR, crop, etc.)
* Update to Spanish translation (thanks to Eric Brandwein)
* Update to Russian translation (thanks to Mikhail Novosyolov)
* Update to Ukranian translation (thanks to Yuri Chornoivan)


2.1.6 (20.09.2018):

* Fixed starting processes from tools menu.
  Closes bug #308 (Exit on Starting OCR)
* Fixed opening UDT and unpaper dialog windows.


2.1.5 (16.09.2018):

* Pass page data to thread just in time to process it, rather than when the